[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://entities/player/chain.png" type="Texture" id=2]
[ext_resource path="res://engine/main.gd" type="Script" id=3]
[ext_resource path="res://ui/main/characterselect.gd" type="Script" id=4]
[ext_resource path="res://engine/keybinds.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("preview:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="main" type="Control"]
margin_right = 39.9996
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 528.0
margin_bottom = 304.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
margin_left = 208.0
margin_top = 48.0
margin_right = 304.0
margin_bottom = 64.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "TetraForce"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="Panel" parent="." groups=[
"menu",
]]
visible = false
margin_left = 176.0
margin_top = 96.0
margin_right = 336.0
margin_bottom = 248.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="top"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -76.0
margin_right = 72.0
margin_bottom = 76.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="singleplayer" type="Button" parent="top/VBoxContainer"]
margin_top = 15.0
margin_right = 144.0
margin_bottom = 36.7537
size_flags_stretch_ratio = 0.0
text = "Singleplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multiplayer" type="Button" parent="top/VBoxContainer"]
margin_top = 40.0
margin_right = 144.0
margin_bottom = 61.7537
size_flags_stretch_ratio = 0.0
text = "Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="Button" parent="top/VBoxContainer"]
margin_top = 65.0
margin_right = 144.0
margin_bottom = 86.7537
size_flags_stretch_ratio = 0.0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="keybinds" type="Button" parent="top/VBoxContainer"]
margin_top = 90.0
margin_right = 144.0
margin_bottom = 111.754
size_flags_stretch_ratio = 0.0
text = "Keybinds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="top/VBoxContainer"]
margin_top = 115.0
margin_right = 144.0
margin_bottom = 136.754
size_flags_stretch_ratio = 0.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multiplayer" type="TabContainer" parent="." groups=[
"menu",
]]
visible = false
margin_left = 144.0
margin_top = 80.0
margin_right = 368.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Automatic" type="Control" parent="multiplayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.99585
margin_top = 29.9958
margin_right = -9.51308
margin_bottom = -9.11333

[node name="lobby" type="LineEdit" parent="multiplayer/Automatic"]
margin_left = 23.0042
margin_top = 82.0042
margin_right = 183.004
margin_bottom = 114.411
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connect" type="Button" parent="multiplayer/Automatic"]
margin_left = 71.0042
margin_top = 130.004
margin_right = 135.004
margin_bottom = 152.004
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="multiplayer/Automatic"]
margin_right = 199.0
margin_bottom = 50.0
text = "Enter any lobby name below to create a new server hosted by us. Enter the same lobby name as someone else to join their server."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Manual" type="Control" parent="multiplayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.99585
margin_top = 29.9958
margin_right = -9.51308
margin_bottom = -9.11333
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="multiplayer/Manual"]
margin_right = 199.0
margin_bottom = 146.0
text = "Host a server on this machine by pressing the button below.
Play on LAN with your local IP or online by port forwarding 7777.


Connect to a server with IP:Port"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="address" type="LineEdit" parent="multiplayer/Manual"]
margin_left = 8.0
margin_top = 114.0
margin_right = 136.0
margin_bottom = 146.407
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1:7777"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Button" parent="multiplayer/Manual"]
margin_left = 71.0042
margin_top = 66.0042
margin_right = 135.004
margin_bottom = 90.0042
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="multiplayer/Manual"]
margin_left = 142.0
margin_top = 120.0
margin_right = 206.0
margin_bottom = 142.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="Panel" parent="." groups=[
"menu",
]]
visible = false
margin_left = 128.0
margin_top = 96.0
margin_right = 384.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scroll" type="ScrollContainer" parent="options"]
margin_right = 256.0
margin_bottom = 176.0
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="Control" parent="options/scroll"]
margin_bottom = 240.0
rect_min_size = Vector2( 0, 240 )

[node name="characterselect" type="Panel" parent="options/scroll/vbox"]
margin_left = 16.0
margin_top = 16.0
margin_right = 240.0
margin_bottom = 156.0
rect_min_size = Vector2( 160, 114 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="options/scroll/vbox/characterselect"]
autoplay = "default"
playback_speed = 4.0
anims/default = SubResource( 1 )

[node name="preview" type="Sprite" parent="options/scroll/vbox/characterselect"]
position = Vector2( 112, 60 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 2 )
vframes = 8
hframes = 6

[node name="name" type="LineEdit" parent="options/scroll/vbox/characterselect"]
margin_left = 48.0
margin_top = 92.0
margin_right = 176.0
margin_bottom = 124.407
text = "Chain"
align = 1
max_length = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="options/scroll/vbox/characterselect"]
margin_left = 48.0
margin_top = 44.0
margin_right = 64.0
margin_bottom = 66.0
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="forward" type="Button" parent="options/scroll/vbox/characterselect"]
margin_left = 160.0
margin_top = 44.0
margin_right = 176.0
margin_bottom = 66.0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="options/scroll/vbox/characterselect"]
margin_left = 16.0
margin_top = 12.0
margin_right = 208.0
margin_bottom = 28.0
text = "Character skin and player name"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="endpoint" type="OptionButton" parent="options/scroll/vbox"]
margin_left = 64.0
margin_top = 166.0
margin_right = 194.0
margin_bottom = 190.0
text = "API Endpoint"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save" type="Button" parent="options"]
margin_left = 320.0
margin_top = 160.0
margin_right = 368.0
margin_bottom = 182.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="keybinds" type="Panel" parent="." groups=[
"menu",
]]
margin_left = 128.0
margin_top = 96.0
margin_right = 384.0
margin_bottom = 272.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scroll" type="ScrollContainer" parent="keybinds"]
margin_top = 10.0
margin_right = 256.0
margin_bottom = 176.0
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="keybinds/scroll"]
margin_right = 248.0
margin_bottom = 221.0
size_flags_horizontal = 3
alignment = 1

[node name="Action_UP" type="HBoxContainer" parent="keybinds/scroll/vbox"]
margin_right = 248.0
margin_bottom = 21.0
alignment = 1

[node name="Label" type="Label" parent="keybinds/scroll/vbox/Action_UP"]
margin_left = 73.0
margin_top = 4.0
margin_right = 85.0
margin_bottom = 17.0
text = "A:"

[node name="Button" type="Button" parent="keybinds/scroll/vbox/Action_UP"]
margin_left = 89.0
margin_right = 175.456
margin_bottom = 21.7537
text = "ActionKeybind"

[node name="Action_DOWN" type="HBoxContainer" parent="keybinds/scroll/vbox"]
margin_top = 25.0
margin_right = 248.0
margin_bottom = 46.0
alignment = 1

[node name="Label" type="Label" parent="keybinds/scroll/vbox/Action_DOWN"]
margin_left = 73.0
margin_top = 4.0
margin_right = 85.0
margin_bottom = 17.0
text = "A:"

[node name="Button" type="Button" parent="keybinds/scroll/vbox/Action_DOWN"]
margin_left = 89.0
margin_right = 175.456
margin_bottom = 21.7537
text = "ActionKeybind"

[node name="Action_LEFT" type="HBoxContainer" parent="keybinds/scroll/vbox"]
margin_top = 50.0
margin_right = 248.0
margin_bottom = 71.0
alignment = 1

[node name="Label" type="Label" parent="keybinds/scroll/vbox/Action_LEFT"]
margin_left = 73.0
margin_top = 4.0
margin_right = 85.0
margin_bottom = 17.0
text = "A:"

[node name="Button" type="Button" parent="keybinds/scroll/vbox/Action_LEFT"]
margin_left = 89.0
margin_right = 175.456
margin_bottom = 21.7537
text = "ActionKeybind"

[node name="Action_RIGHT" type="HBoxContainer" parent="keybinds/scroll/vbox"]
margin_top = 75.0
margin_right = 248.0
margin_bottom = 96.0
alignment = 1

[node name="Label" type="Label" parent="keybinds/scroll/vbox/Action_RIGHT"]
margin_left = 73.0
margin_top = 4.0
margin_right = 85.0
margin_bottom = 17.0
text = "A:"

[node name="Button" type="Button" parent="keybinds/scroll/vbox/Action_RIGHT"]
margin_left = 89.0
margin_right = 175.456
margin_bottom = 21.7537
text = "ActionKeybind"

[node name="Action_A" type="HBoxContainer" parent="keybinds/scroll/vbox"]
margin_top = 100.0
margin_right = 248.0
margin_bottom = 121.0
alignment = 1

[node name="Label" type="Label" parent="keybinds/scroll/vbox/Action_A"]
margin_left = 73.0
margin_top = 4.0
margin_right = 85.0
margin_bottom = 17.0
text = "A:"

[node name="Button" type="Button" parent="keybinds/scroll/vbox/Action_A"]
margin_left = 89.0
margin_right = 175.456
margin_bottom = 21.7537
text = "ActionKeybind"

[node name="Action_B" type="HBoxContainer" parent="keybinds/scroll/vbox"]
margin_top = 125.0
margin_right = 248.0
margin_bottom = 146.0
alignment = 1

[node name="Label" type="Label" parent="keybinds/scroll/vbox/Action_B"]
margin_left = 73.0
margin_top = 4.0
margin_right = 85.0
margin_bottom = 17.0
text = "A:"

[node name="Button" type="Button" parent="keybinds/scroll/vbox/Action_B"]
margin_left = 89.0
margin_right = 175.456
margin_bottom = 21.7537
text = "ActionKeybind"

[node name="Action_X" type="HBoxContainer" parent="keybinds/scroll/vbox"]
margin_top = 150.0
margin_right = 248.0
margin_bottom = 171.0
alignment = 1

[node name="Label" type="Label" parent="keybinds/scroll/vbox/Action_X"]
margin_left = 73.0
margin_top = 4.0
margin_right = 85.0
margin_bottom = 17.0
text = "A:"

[node name="Button" type="Button" parent="keybinds/scroll/vbox/Action_X"]
margin_left = 89.0
margin_right = 175.456
margin_bottom = 21.7537
text = "ActionKeybind"

[node name="Action_Y" type="HBoxContainer" parent="keybinds/scroll/vbox"]
margin_top = 175.0
margin_right = 248.0
margin_bottom = 196.0
alignment = 1

[node name="Label" type="Label" parent="keybinds/scroll/vbox/Action_Y"]
margin_left = 73.0
margin_top = 4.0
margin_right = 85.0
margin_bottom = 17.0
text = "A:"

[node name="Button" type="Button" parent="keybinds/scroll/vbox/Action_Y"]
margin_left = 89.0
margin_right = 175.456
margin_bottom = 21.7537
text = "ActionKeybind"

[node name="Action_START" type="HBoxContainer" parent="keybinds/scroll/vbox"]
margin_top = 200.0
margin_right = 248.0
margin_bottom = 221.0
alignment = 1

[node name="Label" type="Label" parent="keybinds/scroll/vbox/Action_START"]
margin_left = 73.0
margin_top = 4.0
margin_right = 85.0
margin_bottom = 17.0
text = "A:"

[node name="Button" type="Button" parent="keybinds/scroll/vbox/Action_START"]
margin_left = 89.0
margin_right = 175.456
margin_bottom = 21.7537
text = "ActionKeybind"

[node name="back" type="Button" parent="." groups=[
"menu",
]]
margin_left = 16.0
margin_top = 256.0
margin_right = 64.0
margin_bottom = 278.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="top/VBoxContainer/singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="top/VBoxContainer/multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="top/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="top/VBoxContainer/keybinds" to="." method="_on_keybinds_pressed"]
[connection signal="pressed" from="top/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="multiplayer/Automatic/connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="multiplayer/Manual/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="multiplayer/Manual/join" to="." method="_on_join_pressed"]
[connection signal="text_changed" from="options/scroll/vbox/characterselect/name" to="options/scroll/vbox/characterselect" method="_on_name_text_changed"]
[connection signal="item_selected" from="options/scroll/vbox/endpoint" to="." method="_on_endpoint_item_selected"]
[connection signal="pressed" from="options/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
